[metadata]
name = fftvis
description = An FFT-based visibility simulator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyler-a-cox/fftvis
author = Tyler Cox
author_email = tyler.a.cox@berkeley.edu
license = MIT
license_files = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[aliases]
test=pytest


[pycodestyle]
ignore = E402,E501,W291,W293,W503,W601
filename = *.py
exclude = build/,docs/,.pytest_cache,.svn,CVS,.bzr,.hg,.git,__pycache__,dist/,scripts/,hera_cal.egg-info,hera_cal/data/

[pydocstyle]
convention = numpy